[gd_scene load_steps=4 format=2]

[ext_resource path="res://Utility/MouseDetectionLayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Utility/MainCam.gd" type="Script" id=2]
[ext_resource path="res://Effects/CardPlayArrow.tscn" type="PackedScene" id=3]

[node name="MainCam" type="Camera"]
transform = Transform( 1, 0, 0, 0, 0.529194, 0.848501, 0, -0.848501, 0.529194, -0.824969, 7.02401, 4.92062 )
script = ExtResource( 2 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.285995, -0.641087 )

[node name="MouseDetectionLayer" parent="Pivot" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.005, 0 )
visible = false
layer_name = "hand"

[node name="CardSpawnPoint" type="Spatial" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.326864, 1 )

[node name="PlayPosition" type="Spatial" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.322297, 0.256793, -0.349386 )

[node name="CardPlayArrow" parent="Pivot/PlayPosition" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.261781, -0.305691, -0.0541618 )
